mudança no menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
         <div>
                 <h3 class="title-row">
-                  Traga seu Animal de Estimação para uma Consulta
+                    CONFIRA O QUE HÁ DE IMPERDÍVEL NO RECIFE
                 </h3>
         </div>
 
@@ -74,4 +74,4 @@
     </div>      
     </div>
 </body>
-</html>
+
